#include header and source files
include_directories(
${CMAKE_SOURCE_DIR}/source
${CMAKE_SOURCE_DIR}/source/EUTree
${CMAKE_SOURCE_DIR}/source/EUAna
${CMAKE_SOURCE_DIR}/source/EUData
)

#generate an executable file
add_executable (AnaEURICA AnaEURICA.cpp)
EXECUTE_PROCESS(COMMAND root-config --libs OUTPUT_VARIABLE ROOT_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_EXE_LINKER_FLAGS ${ROOT_LD_FLAGS})
target_link_libraries (AnaEURICA LINK_PUBLIC EUROOT)

add_executable (AnaWASABI AnaWASABI.cpp)
EXECUTE_PROCESS(COMMAND root-config --libs OUTPUT_VARIABLE ROOT_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_EXE_LINKER_FLAGS ${ROOT_LD_FLAGS})
target_link_libraries (AnaWASABI LINK_PUBLIC EUROOT)

add_executable (AnaBeam AnaBeam.cpp)
EXECUTE_PROCESS(COMMAND root-config --libs OUTPUT_VARIABLE ROOT_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_EXE_LINKER_FLAGS ${ROOT_LD_FLAGS})
target_link_libraries (AnaBeam LINK_PUBLIC EUROOT)

add_executable (MergeDet MergeDet.cpp)
EXECUTE_PROCESS(COMMAND root-config --libs OUTPUT_VARIABLE ROOT_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_EXE_LINKER_FLAGS ${ROOT_LD_FLAGS})
target_link_libraries (MergeDet LINK_PUBLIC EUROOT)

add_executable (MergeBeam MergeBeam.cpp)
EXECUTE_PROCESS(COMMAND root-config --libs OUTPUT_VARIABLE ROOT_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_EXE_LINKER_FLAGS ${ROOT_LD_FLAGS})
target_link_libraries (MergeBeam LINK_PUBLIC EUROOT)

add_executable (BuildBetaDecay BuildBetaDecay.cpp)
EXECUTE_PROCESS(COMMAND root-config --libs OUTPUT_VARIABLE ROOT_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_EXE_LINKER_FLAGS ${ROOT_LD_FLAGS})
target_link_libraries (BuildBetaDecay LINK_PUBLIC EUROOT)

add_executable (BuildIsoDecay BuildIsoDecay.cpp)
EXECUTE_PROCESS(COMMAND root-config --libs OUTPUT_VARIABLE ROOT_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_EXE_LINKER_FLAGS ${ROOT_LD_FLAGS})
target_link_libraries (BuildIsoDecay LINK_PUBLIC EUROOT)

add_executable (MakeOneTree MakeOneTree.cpp)
EXECUTE_PROCESS(COMMAND root-config --libs OUTPUT_VARIABLE ROOT_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_EXE_LINKER_FLAGS ${ROOT_LD_FLAGS})
target_link_libraries (MakeOneTree LINK_PUBLIC EUROOT)

add_executable (MakeSepPID MakeSepPID.cpp)
EXECUTE_PROCESS(COMMAND root-config --libs OUTPUT_VARIABLE ROOT_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_EXE_LINKER_FLAGS ${ROOT_LD_FLAGS})
target_link_libraries (MakeSepPID LINK_PUBLIC EUROOT)

add_executable (MakeBetaMat MakeBetaMat.cpp)
EXECUTE_PROCESS(COMMAND root-config --libs OUTPUT_VARIABLE ROOT_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_EXE_LINKER_FLAGS ${ROOT_LD_FLAGS})
target_link_libraries (MakeBetaMat LINK_PUBLIC EUROOT)

add_executable (MakeIsoMat MakeIsoMat.cpp)
EXECUTE_PROCESS(COMMAND root-config --libs OUTPUT_VARIABLE ROOT_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(CMAKE_EXE_LINKER_FLAGS ${ROOT_LD_FLAGS})
target_link_libraries (MakeIsoMat LINK_PUBLIC EUROOT)

